--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,20 +1,39 @@
 modLoader="javafml" #mandatory
-loaderVersion="[35,)" #mandatory This is typically bumped every Minecraft version by Forge. See our download page for lists of versions.
+loaderVersion="[36,)" #mandatory This is typically bumped every Minecraft version by Forge. See our download page for lists of versions.
 license="All rights reserved"
-issueTrackerURL="https://github.com/Afroduckie/AGBulkMinerReleases/issues" #optional
+#issueTrackerURL="https://change.me.to.your.issue.tracker.example.invalid/" #optional
 [[mods]] #mandatory
 modId="agbulkminer" #mandatory
 version="${file.jarVersion}" #mandatory
-displayName="[AG] Strip-Miner's Toolchest" #mandatory
-updateJSONURL="https://github.com/Afroduckie/AGBulkMinerReleases/blob/main/update.json" #optional
-displayURL="https://github.com/Afroduckie/AGBulkMinerReleases/releases" #optional
+displayName="AG's Strip-Mining Toolkit" #mandatory
+#updateJSONURL="https://change.me.example.invalid/updates.json" #optional
+#displayURL="https://change.me.to.your.mods.homepage.example.invalid/" #optional
 logoFile="agbulkminer_banner.png" #optional
-credits="Credit goes to William of AndrielGaming." #optional
-authors="AndrielGaming William. Special thanks to Daniel!" #optional
+credits="AndrielGaming" #optional
+authors="AndrielGaming William" #optional
+# The description text for the mod (multi line!) (#mandatory)
 description='''
-Adds a variety of vanilla-friendly tools meant to help with menial tasks.
-Currently features the Hammer, for bulk-mining, and the Dredge, for bulk digging.
-
-Will later implement a tree-capitating axe and a bulk-farming scythe as well as 2 power tools.
-
+AndrielGaming's Strip-Mining Toolkit
+------------------------------------
+A Forge mod adding a variety of new tools designed to make strip-mining and bulk.
 '''
+# A dependency - use the . to indicate dependency for a specific modid. Dependencies are optional.
+[[dependencies.examplemod]] #optional
+    # the modid of the dependency
+    modId="forge" #mandatory
+    # Does this dependency have to exist - if not, ordering below must be specified
+    mandatory=true #mandatory
+    # The version range of the dependency
+    versionRange="[36,)" #mandatory
+    # An ordering relationship for the dependency - BEFORE or AFTER required if the relationship is not mandatory
+    ordering="NONE"
+    # Side this dependency is applied on - BOTH, CLIENT or SERVER
+    side="BOTH"
+# Here's another dependency
+[[dependencies.examplemod]]
+    modId="minecraft"
+    mandatory=true
+# This version range declares a minimum of the current minecraft version up to but not including the next major version
+    versionRange="[1.16.5,1.17)"
+    ordering="NONE"
+    side="BOTH"
